Snap Increment with "Absolute Grid Snap" not working correctly in XY plane #112394

Closed
opened 2023-09-14 19:43:32 +02:00 by Jordan · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.Q3.230719

Blender Version
Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: e53e55951e7a
Worked: (newest version of Blender that worked as expected)

Description of error
When moving an object by using Increment Snapping with "Absolute Grid Snap" enabled and constraining the plane the object no longer moves with the mouse cursor. It is best demonstrated in the video I have captured.

To repeat follow these steps:

  1. Make a new default blender scene with an object to move.
  2. Enable Snapping, set to Increment.
  3. Select the object and then "G" to move it.
  4. Constrain movement to XY plane and move the object around the 3D space.
  5. Next cancel the transform and Enable in the Snapping Setting, "Absolute Grid Snap".
  6. Press "G" to move the object once again and contrain its movement to the same plane as before and move the object around.
  7. The object will no longer follow the cursors movement.

Additionally, this is a recent bug as of this version as tested both 3.4.1 and 3.5 version of blender and they both work as expected, with no Discrepancy.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.Q3.230719 **Blender Version** Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: `e53e55951e7a` Worked: (newest version of Blender that worked as expected) Description of error When moving an object by using Increment Snapping with "Absolute Grid Snap" enabled and constraining the plane the object no longer moves with the mouse cursor. It is best demonstrated in the video I have captured. To repeat follow these steps: 1. Make a new default blender scene with an object to move. 2. Enable Snapping, set to Increment. 3. Select the object and then "G" to move it. 4. Constrain movement to XY plane and move the object around the 3D space. 5. Next cancel the transform and Enable in the Snapping Setting, "Absolute Grid Snap". 6. Press "G" to move the object once again and contrain its movement to the same plane as before and move the object around. 7. The object will no longer follow the cursors movement. Additionally, this is a recent bug as of this version as tested both 3.4.1 and 3.5 version of blender and they both work as expected, with no Discrepancy.
Jordan added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-14 19:43:33 +02:00

I was able to reproduce, but when constrained to plane instead of axis. That is what I see in your video, so I assume that it was a mistake and will edit description.

I was able to reproduce, but when constrained to plane instead of axis. That is what I see in your video, so I assume that it was a mistake and will edit description.
Richard Antalik added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-14 20:16:58 +02:00
Richard Antalik changed title from Snap Increment Discrepancy when "Absolute Grid Snap" is enabled to Snap Increment with "Absolute Grid Snap" not working correctly in XY plane 2023-09-14 20:18:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-08 02:36:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112394
No description provided.