Fix #112394: 'Absolute Grid Snap' not working correctly plane constraint

It is necessary to clear the result of the previous 'target_type' and
apply the constraint before and after snapping to grid.